@@ -1,4 +1,4 @@
-9b5fbf2d4531ed7b0e44fe508b6ed7a0 *DESCRIPTION
+8edd93d4bab32172c716410f1b152ed5 *DESCRIPTION
 a3f97565777d3e7d6fa0b6525b37c9dc *NAMESPACE
 43dae0a83fdb00cd9a55693b0cc39f95 *R/attractorsToLaTeX.R
 0e037f01fa88a832cb43d3a9d5e9f5dd *R/binarizeTimeSeries.R
@@ -22,10 +22,10 @@ a1bb3168d41f445e1f9924d3762f44e2 *R/helpers.R
 6cf426b55ed4fda07a34c45609d5db0c *R/markovSimulation.R
 025678125cdb1ee32fde3531d4f09511 *R/parseBooleanFunction.R
 41c21fcab38d434e2de877d79d435b59 *R/perturbNetwork.R
-b5f0676cbb35c28ddd5f7a0ae21aa3f8 *R/plotAttractors.R
+6bc3921a711f1a759252dee898d64f8b *R/plotAttractors.R
 dddbf2166ac469e0f2b8bf81864a0ebb *R/plotNetworkWiring.R
 a04b208788b419584a8af04ec41c6b6c *R/plotPBNTransitions.R
-4a09e6bf5f14248ae4c74f5ca7b5ef87 *R/plotSequence.R
+858deb28ebd41071bdd1a93aba4ea744 *R/plotSequence.R
 54fa924a8c5a3494fb1faf7f9bfbf6ac *R/plotStateGraph.R
 3c84f69a1018a2b15123bc4a3e7b6296 *R/print.AttractorInfo.R
 bd5b5182c9a4321e0051be7f40bcbf6f *R/print.BooleanNetwork.R
@@ -47,10 +47,10 @@ ed4c8d17bbef54aaca1917bfadc8b6ee *R/toPajek.R
 2162a3dfd9f29f06223413307dd177c8 *data/examplePBN.rda
 8919de127f7ee2391900468a36c5dcd4 *data/yeastTimeSeries.rda
 62409980eecaca8e52f1d495f499d6bd *inst/CITATION
-0ca38459a7dcc5fb388ed08f3964a578 *inst/NEWS.Rd
+27a515041d9b83b70ec4ef9179f42402 *inst/NEWS.Rd
 38c801eb4cb67c7db0b85ccf88dffc7d *inst/doc/BoolNet_package_vignette.Snw
 66c98ffd50ae052da7458c3abcf685ed *inst/doc/BoolNet_package_vignette.bib
-e39e530112bd68df29664886cdf23575 *inst/doc/BoolNet_package_vignette.pdf
+6b44949026f172580f981c712a30891a *inst/doc/BoolNet_package_vignette.pdf
 ec64012a9d59619ca10f7ec773a5ecc5 *inst/doc/attractor1.pdf
 462943d1a5e8c9e9e2c8016b1123ae4c *inst/doc/attractor2.pdf
 182f17338132fdac2a557f97ce9d5161 *inst/doc/basinsize.pdf
@@ -69,7 +69,7 @@ afa4bc65fe533ee9ffdeb8808caa76c1 *inst/doc/piecewisestategraph.pdf
 9cdaa6def60436caa3b3ac2b0e918a0c *inst/doc/stategraph.pdf
 99c3cfee3a4d14bcf7dd0b4aac27916b *inst/doc/wiring.pdf
 d86a9a94edb2c17de545b0d529d440ad *inst/doc/wiring_biotap.pdf
-2eac09c70788cd15fa665ecdd46e55b4 *man/BoolNet-package.Rd
+06deccc84e915061749c7e6518f1bccd *man/BoolNet-package.Rd
 d678fa847d47f0d430737f1ced2a43dd *man/attractorsToLaTeX.Rd
 3461bfd43dd57a88d01d83df611f95c0 *man/binarizeTimeSeries.Rd
 3623b2fe85476af5336cf7e220c1d60e *man/cellcycle.Rd
@@ -94,7 +94,7 @@ ded95935c60346bd4a76529c5938992d *man/perturbNetwork.Rd
 9e9a654367d61c64698e6c841e142c88 *man/plotAttractors.Rd
 afcdb5a1246882b58b770edbbba7940c *man/plotNetworkWiring.Rd
 9ba39e20433ffd9cfa5c29a6293a9ae2 *man/plotPBNTransitions.Rd
-a0eef2e9b91f5b51ad4ef0aea6faa2f6 *man/plotSequence.Rd
+b7e411eead137d04ecd21265f8fe88bf *man/plotSequence.Rd
 0be64e2169945202d9fd359434eee4c6 *man/plotStateGraph.Rd
 5f379a9e2b4a9a418d8b665af74757be *man/print.AttractorInfo.Rd
 e0b2b98da9c074e4e30dd73d57dae9da *man/print.BooleanNetwork.Rd
@@ -103,17 +103,17 @@ d03ef8645e4d3ad814798e882167aa8d *man/print.ProbabilisticBooleanNetwork.Rd
 d6e7961146750c9b36106a8d280a1c09 *man/print.TransitionTable.Rd
 a04d2632a4f3c1af824705713bc20a3d *man/reconstructNetwork.Rd
 ab6fec99e4c1b186071b291307f64f37 *man/saveNetwork.Rd
-14472cad7962ca4e700ff559f8d55b35 *man/sequenceToLaTeX.Rd
+ae64cec722c56f19abd96854b02d5000 *man/sequenceToLaTeX.Rd
 d67ace4fa49e6b2821310c36ac491a5e *man/simplifyNetwork.Rd
 68e41359ee75eed8688523aa904b961f *man/stateTransition.Rd
 839cb9abac605660c7f5c0eabac3385f *man/testNetworkProperties.Rd
 0a34bb4024f6cc4f71efcafcae40fc00 *man/toPajek.Rd
 e5149163eb73190448023911b498586b *man/toSBML.Rd
 7ffc48740e826cbf5c56c11fb8dfe9df *man/yeastTimeSeries.Rd
-586878cd39a3a7929a4af662a767dacb *src/boolean_network.c
+7f69f84671c0a40697057520f03f2ecf *src/boolean_network.c
 5e6f2933daf6b58c94e740e16fd026cc *src/common.c
-955d4becfadeba658ad6ea6ccdc2ca6f *src/common.h
-675c81ba1bf5f01462da08a7daae556b *src/probabilistic_boolean_network.c
+61c4c73990f441c97f4774837ce40b0f *src/common.h
+5674df722e778f810c1fe326e27d53bf *src/probabilistic_boolean_network.c
 686e443cfcfa3f597ea866bc25c356e7 *src/random.h
 31cc7ec675c0399d69b068e501a2bbd7 *src/reconstruct_network.c
 460b4e88a7af5ba2c60231ca9f3644c8 *src/uthash.h
