@@ -9,8 +9,8 @@
 \tabular{ll}{
 Package: \tab BoolNet\cr
 Type: \tab Package\cr
-Version: \tab 1.60\cr
-Date: \tab 2012-12-04\cr
+Version: \tab 1.61\cr
+Date: \tab 2013-03-19\cr
 License: \tab Artistic-2.0\cr
 LazyLoad: \tab yes\cr
 }
