@@ -9,7 +9,7 @@ Create LaTeX table of state sequences
 \description{
 Exports tables of state sequences (corresponding to the plot generated by \code{\link{plotSequence}} with \code{mode="table"}) to a LaTeX document.
 }
-\synopsis{
+\usage{
 sequenceToLaTeX(network, 
                 startState,
                 includeAttractorStates = c("all","first","none"),
@@ -17,24 +17,6 @@ sequenceToLaTeX(network,
                 title = "",
                 grouping = list(), 
                 plotFixed = TRUE,
-                onColor="[gray]{0.9}",
-                offColor="[gray]{0.6}", 
-                file="sequence.tex")
-}
-\usage{
-sequenceToLaTeX(network, 
-                startState,
-                includeAttractorStates = c("all","first","none"),
-                title = "",
-                grouping = list(), 
-                plotFixed = TRUE,
-                onColor="[gray]{0.9}",
-                offColor="[gray]{0.6}", 
-                file="sequence.tex")
-                               
-sequenceToLaTeX(sequence, 
-                title = "", 
-                grouping = list(), 
                 onColor="[gray]{0.9}",
                 offColor="[gray]{0.6}", 
                 file="sequence.tex")
